--- a/src/Widgets/Widgets.module.css
+++ b/src/Widgets/Widgets.module.css
@@ -18,19 +18,29 @@
     width: 100px;
     height: 180px;
     border-radius: 30px;
-    padding: 15px;
     text-align: center;
     background-color: #1E1E1E;
 }
 
-.individual_widget span {
+.individual_widget div  {
+    background-color: #2d2c2c;
+    padding: 10px 0;
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+}
+
+.individual_widget div span {
     color: #B5B3B3;
 }
 
 .individual_widget img {
-    margin-top: 30px;
+    margin-top: 25px;
+    margin-bottom: 20px;
+
 }
 
 .individual_widget span.temp {
-    
+    font-size: 2rem;
+    margin-left: 8px;
+    color: #B5B3B3;
 }
