--- a/src/Widgets/Widgets.module.css
+++ b/src/Widgets/Widgets.module.css
@@ -1,10 +1,74 @@
-.week_btn {
+.todays_date {
     border: none;
     font-size: 1.2rem;
     background-color: transparent;
     text-decoration: underline;
     text-underline-offset: 5px;
-    cursor: pointer;
-    margin-bottom: 2rem;
+    margin-bottom: 1.2rem;
     color: #B5B3B3;
+}
+
+.separator {
+    display: flex;
+    justify-content: center;
+}
+
+.vertical_line {
+    width: 1px;
+    height: 200px;
+    background: white;
+}
+
+.main_information {
+    width: 35%;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-right: 3rem;
+}
+
+.secondary_information {
+    width: 35%;
+    height: 200px;
+    margin: 0rem 3rem;
+    margin-left: 2rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.main_information img {
+    width: 180px;
+    height: 180px;
+}
+
+.main_information div {
+    display: flex;
+    flex-direction: column;
+}
+
+.main_information div span {
+    font-size: 6rem;
+}
+
+.main_information div p {
+    font-size: 1.5rem;
+    font-weight: 100;
+}
+
+.secondary_information div {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem 0;
+}
+
+.secondary_information div span {
+    font-size: 3rem;
+}
+
+.secondary_information div label {
+    font-size: 1.3rem;
+    text-align: center;
+    font-weight: 100;
 }
