--- a/src/Widgets/Widgets.module.css
+++ b/src/Widgets/Widgets.module.css
@@ -198,3 +198,17 @@
     margin-right: 1rem;
     margin-top: 0.9rem;
 }
+
+.loading_container {
+    width: 100%;
+    height: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading_container p {
+    font-size: 5rem;
+    font-weight: 300;
+    font-family: serif;
+}
