--- a/src/TopPart/TopPart.module.css
+++ b/src/TopPart/TopPart.module.css
@@ -56,7 +56,6 @@
     display: block;
 }
 
-
 .indicator img {
     width: 40px;
     height: 40px;
@@ -67,16 +66,17 @@
     height: 40px;
     border-radius: 50%;
     border: none;
-    background-color: #1E1E1E;
     cursor: pointer;
 }
 
 .c_unit {
     margin-right: 5px;
+    background-color: #1E1E1E;
 }
 
 .f_unit {
     margin-left: 5px;
+    background-color: #1E1E1E;
 }
 
 .profile {
@@ -86,5 +86,5 @@
 }
 
 .selected {
-    color: green;
+    background-color: #3d4145;
 }
