--- a/src/Info/Widgets.module.css
+++ b/src/Info/Widgets.module.css
@@ -139,6 +139,10 @@
     justify-content: space-between;
 }
 
+.city:hover {
+    opacity: 0.5;
+}
+
 .city div {
     display: flex;
     flex-direction: column;
@@ -156,6 +160,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.last_city:hover {
+    opacity: 0.5;
 }
 
 .last_city div {
@@ -199,18 +207,4 @@
     height: 50px;
     margin-right: 1rem;
     margin-top: 0.9rem;
-}
-
-.loading_container {
-    width: 100%;
-    height: 540px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.loading_container p {
-    font-size: 5rem;
-    font-weight: 300;
-    font-family: serif;
 }
