--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,10 @@ body {
 .top {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   border-radius: 25px 25px 0 0;
   padding: 2rem 0;
+  margin: 0 2.8rem;
 }
 
 .content {
